Fix overflow scrolling that caused whitespace after the IFrame

--- a/src/less/frame.less
+++ b/src/less/frame.less
@@ -37,8 +37,3 @@ iframe
   display: inline-block;
   position: relative;
 }
-
-.screen
-{
-  overflow: scroll;
-}
